@@ -4,7 +4,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static lotto.domain.Rank.*;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -16,13 +16,13 @@ public class JudgementTest {
     @BeforeEach
     void init() {
         judgement = new Judgement();
-        winningLotto = new WinningLotto(new Lotto(Arrays.asList(1, 2, 3, 4, 5, 6)), new Bonus(7));
+        winningLotto = new WinningLotto(new Lotto(List.of(1, 2, 3, 4, 5, 6)), new Bonus(7));
     }
 
     @DisplayName("로또 1등 판정")
     @Test
     void judgeFirstPlace() {
-        Lotto lotto = new Lotto(Arrays.asList(1, 2, 3, 4, 5, 6));
+        Lotto lotto = new Lotto(List.of(1, 2, 3, 4, 5, 6));
         Rank rank = judgement.getLottoRank(lotto, winningLotto);
         assertThat(rank).isEqualTo(FIRST_PLACE);
     }
@@ -30,7 +30,7 @@ public class JudgementTest {
     @DisplayName("로또 2등 판정")
     @Test
     void judgeSecondPlace() {
-        Lotto lotto = new Lotto(Arrays.asList(1, 2, 3, 4, 5, 7));
+        Lotto lotto = new Lotto(List.of(1, 2, 3, 4, 5, 7));
         Rank rank = judgement.getLottoRank(lotto, winningLotto);
         assertThat(rank).isEqualTo(SECOND_PLACE);
     }
@@ -38,7 +38,7 @@ public class JudgementTest {
     @DisplayName("로또 3등 판정")
     @Test
     void judgeThirdPlace() {
-        Lotto lotto = new Lotto(Arrays.asList(1, 2, 3, 4, 5, 8));
+        Lotto lotto = new Lotto(List.of(1, 2, 3, 4, 5, 8));
         Rank rank = judgement.getLottoRank(lotto, winningLotto);
         assertThat(rank).isEqualTo(THIRD_PLACE);
     }
@@ -46,7 +46,7 @@ public class JudgementTest {
     @DisplayName("로또 4등 판정")
     @Test
     void judgeFourthPlace() {
-        Lotto lotto = new Lotto(Arrays.asList(1, 2, 3, 4, 7, 8));
+        Lotto lotto = new Lotto(List.of(1, 2, 3, 4, 7, 8));
         Rank rank = judgement.getLottoRank(lotto, winningLotto);
         assertThat(rank).isEqualTo(FOURTH_PLACE);
     }
@@ -54,7 +54,7 @@ public class JudgementTest {
     @DisplayName("로또 5등 판정")
     @Test
     void judgeFifthPlace() {
-        Lotto lotto = new Lotto(Arrays.asList(1, 2, 3, 7, 8, 9));
+        Lotto lotto = new Lotto(List.of(1, 2, 3, 7, 8, 9));
         Rank rank = judgement.getLottoRank(lotto, winningLotto);
         assertThat(rank).isEqualTo(FIFTH_PLACE);
     }
@@ -62,7 +62,7 @@ public class JudgementTest {
     @DisplayName("등수 미달")
     @Test
     void judgeUnrank() {
-        Lotto lotto = new Lotto(Arrays.asList(8, 9, 10, 11, 12, 13));
+        Lotto lotto = new Lotto(List.of(8, 9, 10, 11, 12, 13));
         Rank rank = judgement.getLottoRank(lotto, winningLotto);
         assertThat(rank).isEqualTo(UNRANK);
     }
